WIP: Implement row picking stage