@@ -53,6 +53,7 @@ dependencies {
   implementation(kotlin("reflect"))
 
   implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.2")
+  implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3")
 
   implementation("org.glassfish.tyrus.bundles:tyrus-standalone-client:2.1.4")
   implementation("org.springframework:spring-websocket")
@@ -104,6 +105,11 @@ tasks.withType<Test> {
   useJUnitPlatform()
 
   systemProperties(Pair("spring.profiles.active", "unittest"))
+
+  jvmArgs = "-XX:+EnableDynamicAgentLoading".let {
+    @Suppress("UNNECESSARY_SAFE_CALL")
+    jvmArgs?.plus(it) ?: mutableListOf(it)
+  }
 
   testLogging {
     events("passed", "skipped", "failed")
